changes in variables modal to fix alignment issue and other feedback changes

--- a/src/styles.css
+++ b/src/styles.css
@@ -401,10 +401,10 @@ a.dropdown-item:hover {
   }
 
   .plus-icon {
-    font-size: 0.70rem;
+    font-size: 0.80rem;
   }
 
-  .bi-icon:hover {
+  .bi:hover {
     color: rgb(91, 89, 89);
   }
 
